update the description

--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Heh I knew you would say yes!</h1>
+        <h1 class="header_text">Heh I knew jie jie would say yes!</h1>
+        <h1 class="header_text">See you my buitufil jie jie</h1>
         <div class="gif_container">
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnIwejQxMjI4MHFpbHkweHk3ZXkwMjR0OGR3MnJ2OHY5aGJqOWRzbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5Yl2dLAzUDoEEy9zXu/giphy.gif">
         </div>
